<resources>
    <string name="app_name">Airflite Project - Get RESTFul</string>

    <!-- Category name for the first meal type [CHAR LIMIT=20] -->
    <string name="category_device_list">Device Manager</string>
    <string name="meal_name_02">TBA</string>
    <string name="meal_name_03">TBA</string>
    <string name="meal_name_04">TBA</string>

    <!-- Device item -->
    <string name="device_id">ID: </string>
    <string name="device_name">Name: </string>
    <string name="device_serial_no">Serial No.: </string>
    <string name="device_activate_date">Activate Date: </string>
    <string name="device_user_id">User ID: </string>
    <string name="device_com_id">Com ID: </string>
    <string name="device_model">Model: </string>
    <string name="device_tag_id">Tag ID: </string>


</resources>
