<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="@dimen/list_item_height"
        android:layout_height="@dimen/list_item_height"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <TextView
                android:id="@+id/id_view"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_vertical|right"
                android:text="@string/device_id"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_view"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_vertical|right"
                android:text="@string/device_name"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/serialno_view"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_vertical|right"
                android:text="@string/device_serial_no"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/active_date_view"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_vertical|right"
                android:text="@string/device_activate_date"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/black" />

            <!--<TextView-->
                <!--android:id="@+id/user_id_view"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="20dp"-->
                <!--android:gravity="center_vertical|right"-->
                <!--android:text="@string/device_user_id"-->
                <!--android:textAppearance="?android:textAppearanceSmall"-->
                <!--android:textColor="@android:color/black" />-->

            <!--<TextView-->
                <!--android:id="@+id/com_id_view"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="20dp"-->
                <!--android:gravity="center_vertical|right"-->
                <!--android:text="@string/device_com_id"-->
                <!--android:textAppearance="?android:textAppearanceSmall"-->
                <!--android:textColor="@android:color/black" />-->

            <!--<TextView-->
                <!--android:id="@+id/model_view"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="20dp"-->
                <!--android:gravity="center_vertical|right"-->
                <!--android:text="@string/device_model"-->
                <!--android:textAppearance="?android:textAppearanceSmall"-->
                <!--android:textColor="@android:color/black" />-->

            <!--<TextView-->
                <!--android:id="@+id/tag_id_view"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="20dp"-->
                <!--android:gravity="center_vertical|right"-->
                <!--android:text="@string/device_tag_id"-->
                <!--android:textAppearance="?android:textAppearanceSmall"-->
                <!--android:textColor="@android:color/black" />-->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <TextView
                android:id="@+id/id_text_view"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                tools:text="one" />

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/serial_no_text_view"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/active_date_text_view"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:gravity="center_vertical"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@android:color/white" />

            <!--<TextView-->
                <!--android:id="@+id/user_id_text_view"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="20dp"-->
                <!--android:gravity="center_vertical"-->
                <!--android:textAppearance="?android:textAppearanceSmall"-->
                <!--android:textColor="@android:color/white" />-->

            <!--<TextView-->
                <!--android:id="@+id/com_id_text_view"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="20dp"-->
                <!--android:gravity="center_vertical"-->
                <!--android:textAppearance="?android:textAppearanceSmall"-->
                <!--android:textColor="@android:color/white" />-->

            <!--<TextView-->
                <!--android:id="@+id/model_text_view"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="20dp"-->
                <!--android:gravity="center_vertical"-->
                <!--android:textAppearance="?android:textAppearanceSmall"-->
                <!--android:textColor="@android:color/white" />-->

            <!--<TextView-->
                <!--android:id="@+id/tagid_text_view"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="20dp"-->
                <!--android:gravity="center_vertical"-->
                <!--android:textAppearance="?android:textAppearanceSmall"-->
                <!--android:textColor="@android:color/white" />-->

        </LinearLayout>

    </LinearLayout>

</LinearLayout>